# floyo

./: SECURITY.md  package-lock.json  package.json  pyproject.toml  pytest.ini
backend/: requirements.txt
deploy/workers/: wrangler.toml
deploy/workers/src/: worker.js
docs/: GITHUB_SECRETS_CHECKLIST.md
frontend/: package-lock.json  package.json
ops/commands/: aurora-prime.ts
packs/terraform-drift-monitor/: keys.pack.json
scripts/: check-github-secrets.ts
