[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "floyo"
version = "0.1.0"
description = "Tiny system app that suggests concrete, niche API integrations based on actual user routine"
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
authors = [
    {name = "floyo contributors"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "click>=8.0",
    "fastapi>=0.110",
    "numpy>=1.24",
    "pandas>=2.0",
    "psycopg2-binary>=2.9",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "redis>=5.0",
    "requests>=2.28",
    "sqlalchemy>=2.0",
    "stripe>=5.0",
    "toml>=0.10",
    "uvicorn>=0.27",
    "watchdog>=3.0",
]

[tool.setuptools]
packages = ["floyo"]

[project.scripts]
floyo = "floyo.cli:main"

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-cov>=4.0"]
